--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "lint": "eslint --fix",
+    "format": "prettier 'src/**/*.{js,ts,tsx,json}' --write",
     "test": "jest",
     "test:watch": "jest --watchAll --colors",
     "build": "webpack",
@@ -20,7 +21,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
-      "eslint --fix",
+      "yarn format && yarn lint",
       "git add"
     ]
   },
